[tool.poetry]
name = "python-polls"
version = "0.1.0"
description = ""
authors = ["linikerj <linikerenem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
